--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,12 +42,13 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   
+  google_fonts: ^5.1.0
 
   flutter_native_splash: ^2.3.1
 
 flutter_native_splash:
   color: "#ffffff"
-  image: assets/images/palmtree.png
+  image: assets/images/palm.png
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
