--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   http: ^1.1.0
   shared_preferences: ^2.2.1
+  flutter_form_builder: ^9.1.0
+
 
 
 dev_dependencies:
