show data nira, buat add nira masih error

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -12,6 +12,14 @@
 		<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
+		<key>NSLocationWhenInUseUsageDescription</key>
+		<string>Need location when in use</string>
+		<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+		<string>Always and when in use</string>
+		<key>NSLocationUsageDescription</string>
+		<string>Older devices need location</string>
+		<key>NSLocationAlwaysUsageDescription</string>
+		<string>Older devices need location</string>
 		<key>CFBundleName</key>
 		<string>sabang</string>
 		<key>CFBundlePackageType</key>
