--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   json_serializable: ^6.7.1
   location: ^5.0.3
   shared_preferences: ^2.2.1
+  connectivity_plus: ^4.0.2
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_native_splash: ^2.3.1
