--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shared_preferences: ^2.2.1
   connectivity_plus: ^4.0.2
   image_picker: ^1.0.4
+  image_cropper: ^5.0.0
 
 dev_dependencies:
   flutter_native_splash: ^2.3.1
