--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   connectivity_plus: ^4.0.2
   image_picker: ^1.0.4
   image_cropper: ^5.0.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_native_splash: ^2.3.1
