get gardenControl dan detailnya, untuk add error

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -12,13 +12,15 @@
 		<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
+		<key>NSPhotoLibraryUsageDescription</key>
+		<key>NSCameraUsageDescription</key>
 		<key>NSLocationWhenInUseUsageDescription</key>
 		<string>Need location when in use</string>
 		<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 		<string>Always and when in use</string>
-		<key>NSLocationUsageDescription</string>
+		<key>NSLocationUsageDescription</key>
 		<string>Older devices need location</string>
-		<key>NSLocationAlwaysUsageDescription</string>
+		<key>NSLocationAlwaysUsageDescription</key>
 		<string>Older devices need location</string>
 		<key>CFBundleName</key>
 		<string>sabang</string>
