--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^1.0.4
   image_cropper: ^5.0.0
   provider: ^6.0.5
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_native_splash: ^2.3.1
