--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   image_cropper: ^5.0.0
   provider: ^6.0.5
   intl: ^0.18.1
+  avicenna:
+    git:
+      url: https://github.com/roniseti/avicenna.git
+      ref: main
 
 dev_dependencies:
   flutter_native_splash: ^2.3.1
