--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  fluttertoast: ^8.2.4
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   build_runner: ^2.4.6
   cupertino_icons: ^1.0.2
   flutter:
