--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,17 +28,17 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  uuid: ^4.2.1
+  path_provider: ^2.1.1
   fluttertoast: ^8.2.4
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  build_runner: ^2.4.6
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.5.0
   http: ^1.1.0
   json_annotation: ^4.8.1
-  json_serializable: ^6.7.1
   location: ^5.0.3
   shared_preferences: ^2.2.1
   connectivity_plus: ^4.0.2
@@ -52,6 +52,9 @@ dependencies:
       ref: main
 
 dev_dependencies:
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
+  hive_generator: ^2.0.1
   flutter_native_splash: ^2.3.1
   flutter_test:
     sdk: flutter
